Fix css for discover so z-index layers do not overlap for map and modal close button. Remove Map display temporarily on event and show page. Add placeholder icon button. Add event listener to hide and display map.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,8 +33,9 @@ html {
   font-size: 16px;
 }
  body {
-   background-color: var(--main-background-color);
- }
+  background-color: var(--main-background-color);
+  margin-bottom: 67px;
+  margin-top: 46px; }
 
  img {
    width: 100%;
