--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -2,11 +2,10 @@
   display: block;
   border: 1px solid var(--main-dark-grey);
   padding: 13px 10px;
-  margin: 2em auto;
+  margin: 1em auto;
   width: 55%;
   background-color: var(--main-white);
   font-size: 1.1em;
-
 }
     .big-button:hover {
       background-color: var(--main-dark-grey);
