--- a/app/assets/stylesheets/discover.scss
+++ b/app/assets/stylesheets/discover.scss
@@ -3,9 +3,8 @@
 }
 
 .discover-header {
-  margin: 0.5em 0;
-  font-size: 2em;
-
+  margin: 2em 0 0 0;
+  font-size: 1.7em;
 }
 
 .activity-type-header {
@@ -38,7 +37,7 @@
   margin: 8px auto;
   display: block;
   padding: 10px 0px;
-  width: 16vh;
+  width: 20vh;
   // color: var(--main-black);
   border: 1px solid var(--main-dark-grey);
   box-shadow: -3px 3px var(--main-dark-grey), -2px 2px var(--main-dark-grey), -1px 1px var(--main-dark-grey);
