--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,27 +1,3 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-#map {
-       height: 50%;
-       width: 50%;
-       position: absolute;
-
-     }
-     /* Optional: Makes the sample page fill the window. */
-     html, body {
-       height: 100%;
-       margin: 0;
-       padding: 0;
-   }
-#search{
-
-
-}
-
-#eventsMap {
-    height: 500px;
-    width: 500px;
-    position: relative;
-
-}
