--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -1,3 +1,5 @@
-div.hidden {
-  display: none;
+.index-header {
+  display: inline-block;
+  font-size: 1.7em;
+  padding-left: 8px;
 }
