--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -39,7 +39,8 @@
 
 .home-heading {
   text-align: left;
-  margin: 1em 0.5em 0 0.5em;
+  margin: 1em 0.5em 0 1.7em;
+  font-size: 1.2em;
 }
 
 .event-title {
